[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Music/Menu4.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/HUD/fontMenu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/HUD/Font/NormalFont.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 3
outline_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 4 )

[node name="pauseMenu" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0.407843, 0.478431, 0.282353, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -407.0
margin_right = 4.0
margin_bottom = 17.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -87.0
margin_right = 204.0
margin_bottom = 157.0

[node name="btnBack" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 74.0
custom_colors/font_color_hover = Color( 0.968627, 0.866667, 0.0352941, 1 )
custom_fonts/font = ExtResource( 3 )
text = "VOLVER"
flat = true

[node name="btnExit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 78.0
margin_right = 405.0
margin_bottom = 152.0
custom_colors/font_color_hover = Color( 1, 0.32549, 0.25098, 1 )
custom_fonts/font = ExtResource( 3 )
text = "SALIR"
flat = true

[node name="soundControl" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_top = 156.0
margin_right = 405.0
margin_bottom = 156.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/VBoxContainer/soundControl"]
margin_left = -48.0
margin_top = 101.0
margin_right = 463.0
margin_bottom = 183.0

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/soundControl"]
margin_left = -13.5
margin_top = 149.0
margin_right = 432.5
margin_bottom = 165.0
min_value = -30.0
max_value = 0.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/soundControl"]
margin_left = -12.0
margin_top = 112.0
margin_right = 90.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
text = "SONIDO"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 579.0
margin_top = 7.0
margin_right = 798.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 3 )
text = "PAUSA"
align = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/btnBack" to="." method="_on_btnBack_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/btnExit" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/soundControl/HSlider" to="." method="_on_HSlider_value_changed"]
